# backend-coproduction

./: .env  .env.integrated  .env.solo  .gitignore  .secrets.example  Dockerfile  Dockerfile.coproduction  Dockerfile.postgres  Makefile  docker-compose.devintegrated.yml  docker-compose.devsolo.yml  docker-compose.integrated.yml  docker-compose.prod.yml  docker-compose.solodev.yml  docker-compose.yml  release-notes.txt  tests-start.sh
coproduction/: .gitignore  format.sh  gunicorn_conf.py  lint.sh  pyproject.toml  seed.sh  start-dev.sh  start-prod.sh  start.sh  worker-start.sh
coproduction/alembic/: env.py
coproduction/alembic/versions/: 0462dcc06662_add_coproductionproc_gameid.py  0ad3647edd58_.py  0f727d655ce1_additionalemails.py  12a0ced8c03a_add_coproid_usernotifications.py  12a460d28a99_addingfieldhideguide.py  130d91688f27_addingparticipationrequesttable.py  1528ab0bd4c8_cloned_tag_coprod.py  1d0b4b775849_adding_requirements_copro.py  1e7f299eebb8_add_interation_governmental_model.py  1f4674af7c12_add_story.py  208738f13dce_fix_tag_uuid.py  2178b408a424_treeitems.py  270a1c42c6fc_add_notification_language.py  2cd9f74aaf57_add_tags.py  30aca9fa633a_second.py  30aca9fa633a_v1.1.3.py  3772821fd934_addrankingstorytable.py  3854be0215c7_add_application_for_teams.py  432b4d79a2b5_addingclaimtable.py  44ac177300e0_apply_and_notifications.py  45a99ad69c75_added_initial_table.py  48429167d6dd_change_enum_coprostate.py  5286216dd426_superuser_boolean.py  563e95d5c042_add_notifications_type.py  57cbf69842b8_added_initial_table.py  58705472ef15_treeitems.py  5c3b601741f8_add_default_copro_state.py  7370fe66080a_addassignmentstable.py  794605c8228b_addingtypeclaimtable.py  798a541debc8_addingkeywordsstories.py  79e7eb1f053f_add_notification.py  7b1b9f388079_creatingrantingtable.py  7bbdc4cbbdb5_add_point_tasks.py  7e3153a426bc_add_logotype_story.py  801536322b76_copro_state_removed.py  8313f41ab9fd_team_names_not_unique.py  8575af21e211_edit_tags.py  86b8b82d8317_adding_icon_notification.py  8beab7a600b4_adding_ispublic_to_coproductionpro.py  90937d7439be_add_tags_coprods.py  (+28 more)
coproduction/app/: celery_app.py  citizens.py  config.py  create_models.py  crud.py  delete_all_data_copro_notifications.py  development.py  fixing_old_copro_tree_stucture.py  initial_data.py  initial_data_notifications.py  kpis.py  locales.py  main.py  messages.py  middleware.py  migrate_claim_data.py  models.py  notifications.py  notificationsManager.py  permissions.py  pre_start.py  recomenders.py  schemas.py  signals.py  sockets.py  tables.py  translations.py  utils.py  waits.py  worker.py  worker_pre_start.py
coproduction/app/acl/: crud.py  models.py  schemas.py
coproduction/app/assetnotifications/: crud.py  models.py  schemas.py
coproduction/app/assets/: crud.py  models.py  schemas.py
coproduction/app/assetsdata/: crud.py  models.py  schemas.py
coproduction/app/assignments/: crud.py  models.py  schemas.py
coproduction/app/claims/: crud.py  models.py  schemas.py
coproduction/app/coproductionprocesses/: crud.py  models.py  schemas.py
coproduction/app/coproductionprocessnotifications/: crud.py  models.py  schemas.py
coproduction/app/coproductionschemas/: crud.py  models.py  schemas.py
coproduction/app/general/: authentication.py  baseconfig.py  deps.py  email_test.py  emails copy.py  emails.py  emailsV2.py  prestart_functions.py
coproduction/app/keywords/: crud.py  models.py  schemas.py
coproduction/app/memberships/: crud.py  models.py  schemas.py
coproduction/app/notifications/: crud.py  models.py  schemas.py
coproduction/app/objectives/: crud.py  models.py  schemas.py
coproduction/app/organizations/: crud.py  models.py  schemas.py
coproduction/app/participationrequests/: crud.py  models.py  schemas.py
coproduction/app/permissions/: crud.py  models.py  schemas.py
coproduction/tests/: conftest.py
(+180 files in other folders)
