[tool.poetry]
name = "coproduction"
version = "0.1.0"
description = ""
authors = ["danielSilva21 <danyche2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.85.2"
python-multipart = "0.0.5"
requests = "2.28.1"
celery = "5.2.7"
pydantic = "^1.10.2"
jinja2 = "^3.1.2"
authlib = "^1.1.0"
psycopg2-binary = "^2.9.5"
alembic = "^1.8.1"
aiofiles = "^22.1.0"
pyjwt = "^2.6.0"
sqlalchemy = "^1.4.42"
fastapi-utils = "^0.2.1"
itsdangerous = "^2.1.2"
pydantic-choices = "^0.1.1"
python-jose = "^3.3.0"
babel = "^2.11.0"
gunicorn = "^20.1.0"
uvicorn = "^0.19.0"
python-slugify = "^6.1.2"
favicon = "^0.7.0"
starlette-context = "^0.3.4"
cached-property = "^1.5.2"
emails = "^0.6"
uuid-by-string = "^0.1.0"
tenacity = "^8.1.0"
sqlalchemy-utils = "^0.38.3"
httpx = "^0.23.0"
redis = "^4.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
