[tool.poetry]
name = "coproduction"
version = "0.1.0"
description = ""
authors = ["danielSilva21 <danyche2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.85.2"
python-multipart = "0.0.5"
requests = "2.28.1"
celery = "5.2.7"
pydantic = {extras = ["email"], version = "^1.10.2"}
jinja2 = "^3.1.2"
authlib = "^1.1.0"
psycopg2-binary = "^2.9.5"
alembic = "^1.8.1"
aiofiles = "^22.1.0"
pyjwt = "^2.6.0"
sqlalchemy = "^1.4.42"
fastapi-utils = "^0.2.1"
itsdangerous = "^2.1.2"
pydantic-choices = "^0.1.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
babel = "^2.11.0"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
python-slugify = "^6.1.2"
favicon = "^0.7.0"
starlette-context = "^0.3.4"
cached-property = "^1.5.2"
emails = "^0.6"
uuid-by-string = "^0.1.0"
tenacity = "^8.1.0"
sqlalchemy-utils = "^0.38.3"
redis = "^4.3.4"
httpx = "^0.23.0"


[tool.poetry.group.dev-dependencies.dependencies]


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^22.10.0"
isort = "^5.10.1"
autoflake = "^1.7.7"
flake8 = "^5.0.4"
pytest = "^7.2.0"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^4.0.0"
pyparsing = "^3.0.9"
pydot = "^1.4.2"
sqlalchemy-schemadisplay = "^1.3"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
