[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.15"
authlib = "0.13"
httpx = "0.7.8"
fastapi = "0.72.0"
python-multipart = "0.0.5"
requests = "2.28.1"
redis = "4.3.4"
celery = "5.2.7"
tenacity = "6.3.1"
pydantic = {extras = ["email"], version = "1.9.1"}
jinja2 = "3.1.2"
psycopg2-binary = "2.9.3"
alembic = "1.8.0"
sqlalchemy = "1.4.39"
aiofiles = "0.7.0"
PyJWT = "2.4.0"
sqlalchemy-utils = "0.38.3"
starlette = "0.17.1"
fastapi-utils = "0.2.1"
itsdangerous = "2.1.2"
pydantic_choices = "0.1.1"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
Babel = "2.10.3"
gunicorn = "20.1.0"
uvicorn = {extras = ["standard"], version = "0.15.0"}
python-slugify = "5.0.2"
favicon = "0.7.0"
starlette_context = "0.3.4"
cached-property = "1.5.2"
emails = "0.6"
uuid-by-string = "0.1.0"
fastapi-pagination = "0.9.1"

[tool.poetry.dev-dependencies]
mypy = "0.770"
black = "19.10b0"
isort = "4.3.21"
autoflake = "1.4"
flake8 = "3.9.2"
pytest = "5.4.3"
sqlalchemy-stubs = "0.3"
pytest-cov = "2.12.1"
pyparsing = "3.0.9"
pydot = "1.4.2"
sqlalchemy_schemadisplay = "1.3"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

